# knowsee-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCH-VIZ.md  ARCH.md  ARCHITECTURE-BREAKDOWN.md  CLAUDE.md  CONTRIBUTING.md  DECISION-FRAMEWORK.md  Dockerfile  EXTERNALS.md  EXTRACTION-BLUEPRINT.md  FRONTEND_SETUP.md  GCP_ARCHITECTURE.md  GEMINI.md  LICENSE  MINDMAP-IMPORT-GUIDE.md  Makefile  ONYX-ARCHITECTURE-DIAGRAMS.md  ONYX-COMPLETE-MINDMAP.md  ONYX-MINDMAP-FOR-MIRO.csv  ONYX-MINDMAP-HIERARCHICAL.txt  QUICK-START.md  QUICKSTART.md  README.md  REBRANDING_PLAN.md  REBRANDING_PLAN_COMPREHENSIVE.md  RENAME_STRATEGY.md  REPO_MASTER.md  SYNC-UPSTREAM.md  TERRAFORM_MIGRATION.md  docker-compose.test.yml  explore_app.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  test.py  trigger_latency_alert.py
.claude/: settings.local.json
.claude/agents/: backend-specialist.md  frontend-specialist.md  knowsee-crawler.md  knowsee-documenter.md  reliability-engineer.md
.githooks/: pre-commit
.github/workflows/: backend-lint.yml  backend-test.yml  backend.yml  ci.yml  doc-sync-check.yml  docker-build.yml  frontend.yml  lint.yml  playwright.yml  pr_checks.yaml  terraform.yml
app/: agent.py  agent_engine_app.py  agui_adapter.py  api.py  fast_api_app.py
app/app_utils/: tracing.py
app/utils/: tracing.py  typing.py
backend/: alembic.ini  entrypoint.sh
backend/alembic/: env.py
backend/src/: app.py  graph.py  protocol.py  stream.py
conceptual/: component-1-architecture-design.md  component-1-source-discovery.md
data_ingestion/: README.md
data_ingestion/data_ingestion_pipeline/: pipeline.py
deployment/: README.md
deployment/docker_compose/: .env.development  .env.local-testing  .env.production  .env.staging  run-local-prod.sh  (+2 more)
dev/: .env.example  README.md  docker-compose.sagent.yml  docker-compose.yml
docs/: ARCHIVED_FRAMEWORK_COMPARISON.md  ARCH_FLOW.md  CONSIDERATIONS.md  GCP_PROFILE_MANAGEMENT.md  OBSERVABILITY.md  STREAMING_LANGGRAPH_VERCEL.md  STREAMING_LANG_VERC.md  TESTING.md
frontend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.local  README.md  docker-compose.local.yml  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  tsconfig.json  vitest.config.ts
knowsee-starter/: GEMINI.md  Makefile  README.md  deployment_metadata.json  pyproject.toml
local/: docker-compose.sagent.yml
notebooks/: FRONTEND_STACK_PRIMER.md  LANGGRAPH_LEARNING_SUMMARY.md  bq_agent_quickstart.ipynb  learning_langgraph_with_bigquery.ipynb
refs/: funny-verbs.txt
sagent/: Makefile  README.md  pyproject.toml
scripts/: detect_drift.py  switch-gcp-profile.sh
terraform/: README.md
tests/: __init__.py  conftest.py  factories.py  run_all_tests.sh
web/: .env.example  Dockerfile  Dockerfile.dev  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
workflows/: deploy-to-prod.yaml  staging.yaml
(+331 files in other folders)
